Mobile Overflow Fix

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -268,11 +268,13 @@ body {
   grid-template-columns: 1fr;
 }
 
-main {
+.main {
+  position: relative;
   grid-row: 2/3;
   display: grid;
   grid-template-columns: 1fr;
   margin-bottom: 40px;
   overflow-x: hidden;
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
