--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,5 +15,5 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
